--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.7",
-    "sqlite": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "nodemailer": "^6.9.8",
-    "path": "0.12.7",
-    "url": "0.11.4",
-    "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "0.553.0",
+    "next": "16.0.1",
+    "nodemailer": "^6.9.8",
+    "path": "0.12.7",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "3.4.0",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "url": "0.11.4"
   },
   "devDependencies": {
+    "@types/node": "24.10.0",
     "@types/react": "19.2.3",
     "@types/react-dom": "19.2.2",
-    "@types/node": "24.10.0",
+    "postcss": "8.5.6",
     "tailwindcss": "4.1.17",
-    "typescript": "5.9.3",
-    "postcss": "8.5.6"
+    "typescript": "5.9.3"
   }
 }
