--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "0.553.0",
+    "mongo": "^0.1.0",
     "mongodb": "^7.0.0",
     "next": "16.0.2",
     "nodemailer": "^6.9.8",
